--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,22 +6,23 @@
     android:background="#F1F1F1">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#F1F1F1"
         >
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="57dp"
+            android:background="@color/colorPrimary">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+            <!--androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar_h"
                 android:layout_width="match_parent"
                 android:layout_height="57dp"
                 android:layout_marginRight="10.3dp"
                 android:background="@color/colorPrimary"
                 android:theme="@style/MyActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" /-->
 
             <TextView
                 android:id="@+id/ticket_count"
@@ -46,12 +47,21 @@
                 android:fontFamily="@font/nanumgothic_font_family"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="60dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/logo"
+                android:layout_marginLeft="5.5dp"
+                android:layout_gravity="center_vertical"
+                >
+            </ImageView>
         </FrameLayout>
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#F1F1F1">
+            android:background="#F1F1F1"
+            >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
