--- a/app/src/main/res/layout/fragment_wlist.xml
+++ b/app/src/main/res/layout/fragment_wlist.xml
@@ -8,8 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="57dp">
+        </LinearLayout>
+        <!--androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_w"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:background="@color/colorPrimary"
@@ -26,7 +30,7 @@
                 android:textStyle="bold"
                 android:gravity="center_vertical"
                 />
-        </androidx.appcompat.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
