--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
     </style>
     <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="background">@color/colorPrimary</item>
-        <item name="logo">@drawable/logo</item>
+        <!--item name="logo">@drawable/logo</item-->
         <item name="displayOptions">useLogo|showHome</item>
     </style>
     <style name="MyActionBar2" parent="@style/Widget.AppCompat.Light.ActionBar">
