--- a/app/src/main/res/layout/activity_certification_u.xml
+++ b/app/src/main/res/layout/activity_certification_u.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/et_university"
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
-                android:hint="ex) 연세대학교"
+                android:hint="ex) 연세대"
                 android:textSize="12dp"
                 android:background="@drawable/edittext_signup"
                 android:gravity="center_vertical"
