--- a/app/src/main/res/drawable/state_pressed_gray.xml
+++ b/app/src/main/res/drawable/state_pressed_gray.xml
@@ -8,8 +8,8 @@
                 android:topRightRadius="10dp"
                 android:bottomLeftRadius="10dp"
                 android:bottomRightRadius="10dp"/>
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorHint"/>
         </shape>
-        <color android:color="#F5F5F5"/>
+        <color android:color="#BEBEBE"/>
     </item>
 </ripple>
