--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -62,6 +62,7 @@
                 android:background="@color/colorPrimary"
                 android:elevation="20dp">
                 <ImageButton
+                    android:id="@+id/btn_call_manager"
                     android:layout_width="56dp"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
