--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -4,137 +4,143 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary">
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="57dp"
-            android:orientation="horizontal">
-            <TextView
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="57dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="마이페이지"
+                    android:textSize="14dp"
+                    android:fontFamily="@font/roboto_font_family"
+                    android:gravity="center_horizontal|center_vertical"/>
+            </LinearLayout>
+            <!--androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:background="@color/colorPrimary"
+                android:theme="@style/MyActionBar2"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="마이페이지"
+                android:layout_gravity="center"
+                android:id="@+id/toolbar_title"
                 android:textSize="14dp"
-                android:fontFamily="@font/roboto_font_family"
-                android:gravity="center_horizontal|center_vertical"/>
-        </LinearLayout>
-        <!--androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="@color/colorPrimary"
-            android:theme="@style/MyActionBar2"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="마이페이지"
-            android:layout_gravity="center"
-            android:id="@+id/toolbar_title"
-            android:textSize="14dp"
-            android:textColor="@color/colorNormal"
-            android:fontFamily="@font/nanumgothic_font_family"
-            android:textStyle="bold"/>
-        </androidx.appcompat.widget.Toolbar-->
-        <!--RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="52dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/title_mypage"
-            />
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/actionbar_notification"
-                android:background="@null"
-                android:layout_marginRight="65dp"
-                />
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/actionbar_ticket"
-                android:background="@null"
-                android:layout_marginRight="18dp"
-                />
-        </RelativeLayout-->
-        <com.yamigu.yamigu_app.CustomLayout.ProfileCard
-            android:id="@+id/profile_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            app:age="24"
-            app:company="연세대학교"
-            app:department="전기전자공학부"
-            app:nickname="김찬열"></com.yamigu.yamigu_app.CustomLayout.ProfileCard>
-
-        <com.yamigu.yamigu_app.CustomLayout.InviteFriends
-            android:id="@+id/invite_friend"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="33dp"
-            app:code="q7tik3">
-        </com.yamigu.yamigu_app.CustomLayout.InviteFriends>
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="33dp">
-            <RelativeLayout
+                android:textColor="@color/colorNormal"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:textStyle="bold"/>
+            </androidx.appcompat.widget.Toolbar-->
+            <!--RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <LinearLayout
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="52dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/title_mypage"
+                />
+                <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="vertical">
-                    <TextView
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/actionbar_notification"
+                    android:background="@null"
+                    android:layout_marginRight="65dp"
+                    />
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/actionbar_ticket"
+                    android:background="@null"
+                    android:layout_marginRight="18dp"
+                    />
+            </RelativeLayout-->
+            <com.yamigu.yamigu_app.CustomLayout.ProfileCard
+                android:id="@+id/profile_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                app:age="24"
+                app:company="연세대학교"
+                app:department="전기전자공학부"
+                app:nickname="김찬열"></com.yamigu.yamigu_app.CustomLayout.ProfileCard>
+
+            <com.yamigu.yamigu_app.CustomLayout.InviteFriends
+                android:id="@+id/invite_friend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="33dp"
+                app:code="q7tik3">
+            </com.yamigu.yamigu_app.CustomLayout.InviteFriends>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="33dp"
+                android:layout_marginBottom="33dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="19dp"
-                        android:text="야미구와 1:1 대화하기"
-                        android:textSize="14dp"
-                        android:textColor="@color/colorBlack"
-                        android:fontFamily="@font/nanumgothic_font_family"
-                        />
-                    <ImageView
-                        android:layout_width="26dp"
-                        android:layout_height="4dp"
-                        android:background="@color/colorPoint"
-                        android:layout_marginLeft="19dp"/>
-                    <LinearLayout
-                        android:layout_width="359dp"
-                        android:layout_height="90.93dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="4dp"
-                        android:background="@drawable/profile_card_bg">
-                        <ImageView
+                        android:layout_centerHorizontal="true"
+                        android:orientation="vertical">
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/text_chat_yamigu_desc"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginLeft="10dp"/>
+                            android:layout_marginLeft="19dp"
+                            android:text="야미구와 1:1 대화하기"
+                            android:textSize="14dp"
+                            android:textColor="@color/colorBlack"
+                            android:fontFamily="@font/nanumgothic_font_family"
+                            />
+                        <ImageView
+                            android:layout_width="26dp"
+                            android:layout_height="4dp"
+                            android:background="@color/colorPoint"
+                            android:layout_marginLeft="19dp"/>
+                        <LinearLayout
+                            android:layout_width="359dp"
+                            android:layout_height="90.93dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="4dp"
+                            android:background="@drawable/profile_card_bg">
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/text_chat_yamigu_desc"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginLeft="10dp"/>
+                        </LinearLayout>
                     </LinearLayout>
-                </LinearLayout>
-            </RelativeLayout>
+                </RelativeLayout>
 
-            <ImageButton
-                android:id="@+id/btn_kakao_chat"
-                android:layout_width="315dp"
-                android:layout_height="44.33dp"
-                android:background="@drawable/ic_filter_state_kakao"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="96dp"
-                android:src="@drawable/btn_kakao_chat_text"
-                >
-            </ImageButton>
-        </FrameLayout>
-    </LinearLayout>
+                <ImageButton
+                    android:id="@+id/btn_kakao_chat"
+                    android:layout_width="315dp"
+                    android:layout_height="44.33dp"
+                    android:background="@drawable/ic_filter_state_kakao"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="96dp"
+                    android:src="@drawable/btn_kakao_chat_text"
+                    >
+                </ImageButton>
+            </FrameLayout>
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
