--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -27,6 +27,9 @@
                 android:fitsSystemWindows="true"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
                 <androidx.recyclerview.widget.RecyclerView
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:id="@+id/recyclerChat"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
