--- a/app/src/main/res/layout/activity_certification_w.xml
+++ b/app/src/main/res/layout/activity_certification_w.xml
@@ -8,6 +8,10 @@
     android:background="@color/colorPrimary">
 
     <LinearLayout
+        android:id="@+id/overall_layout"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -30,6 +34,10 @@
             </TextView>
         </androidx.appcompat.widget.Toolbar>
         <LinearLayout
+            android:id="@+id/inner_layout"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="36dp"
