--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,10 @@
     android:background="@color/colorPrimary"
     tools:context=".Activity.MainActivity">
     <FrameLayout
+        android:id="@+id/overall_layout"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
